# OpenQueri-backend

./: .env  .gitignore  Cargo.toml  README.md  add.sh  docker-compose.yml
migrations/: 20260510191511_create_users_table.sql  20260511000625_create_users_table.sql  20260513221443_crawler_list_table.sql
search_engine_db/: db  snap.0000000000007684
search_engine_graph/hnsw/: hnsw_index.hnsw.data  hnsw_index.hnsw.graph
search_engine_graph/sled/: db  snap.0000000000003367
src/: main.rs  version.rs
src/api/: mod.rs
src/api/auth/: login.rs  register.rs
src/api/crawler/: add.rs
src/api/delete_sesion_token/: delete_sesion_token.rs  mod.rs
src/api/search/: search.rs
src/api/stats/: mod.rs  redis_stats.rs  stats.rs
src/api/workspace/: mod.rs  workspace.rs  workspace_ws.rs
src/argon2/: argon.rs
src/db/: db.rs
src/paseto/: paseto.rs
src/redis/: mod.rs  redis.rs  redis_stats.rs
src/router/: router.rs
src/setting/: setting.rs
