[package]
name = "OpenQueri-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
query-search = { path = "/home/kiril/OpenQueri/query-search" }

axum = { version = "0.8.8", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
