[package]
name = "OpenQueri-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
query-search = { path = "../query-search" }
crawler-engine = { path = "../crawler-engine" }

axum = { version = "0.8.9", features = ["macros", "json", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
redis = { version = "0.25", features = ["tokio-comp", "aio"] }


[profile.release]
lto = "fat"        
codegen-units = 1     
panic = "abort"       
opt-level = 3
strip = true  

[release]
rustflags = ["-C", "target-cpu=native"]

[build]
rustflags = ["-C", "target-cpu=native"]
