[package]
name = "OpenQueri-backend"
version = "0.9.3"
edition = "2024"

[dependencies]
query-search = { path = "../query-search" }
crawler-engine = { path = "../crawler-engine" }

axum = { version = "0.8.9", features = ["macros", "json", "ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
redis = { version = "0.25", features = ["tokio-comp", "aio"] }

pasetors = "0.7.6"
argon2 = "0.5"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono"] }
dotenvy = "0.15"
anyhow = "1.0.102"
chrono = "0.4.44"
time = "0.3"
futures-util = "0.3.32"





[profile.release]
lto = "fat"        
codegen-units = 1     
panic = "abort"       
opt-level = 3
strip = true  

[release]
rustflags = ["-C", "target-cpu=native"]

[build]
rustflags = ["-C", "target-cpu=native"]
